feat(iam): add admin portal backend and tests